# 51-MCU-Machine-Operation-Simulation

./: AGENTS.md  AI.h  CLAUDE.md  CMakeLists.txt  PROJECT.md  README.md  TrajectorySystem.gitignore  TrajectorySystem.slnx  TrajectorySystem.vcxproj  TrajectorySystem.vcxproj.filters  day1_trajectory.m  day2_state_generation.m  main.cpp  motion.cpp  使用说明.md
TrajectorySystem/x64/Debug/: TrajectorySystem.exe.recipe  TrajectorySystem.ilk  vc145.idb
TrajectorySystem/x64/Debug/TrajectorySystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TrajectorySystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
firmware/: hal_map.h  led_matrix.c  led_matrix.h  main.c  protocol.c  protocol.h  queue.c  queue.h
matlab/: day1_trajectory.m  day2_state_generation.m  trajectory.txt
src/: AI.cpp  DSAI.cpp  DSAI.h  Point.h  main.cpp  motion.h  protocol.cpp  protocol.h  serial.cpp  serial.h
tests/: CMakeLists.txt  mcu_simulator.py  test_motion.cpp  test_protocol.cpp
